A couple of small fixes to make Jakarta Slide work ... still has a few issues getting past the top page